[tool.poetry]
name = "abrasci-api"
version = "0.1.0"
description = ""
authors = ["ivansantiagojr <ivansantiago.junior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
ruff = "^0.7.4"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
mypy = "^1.13.0"
testcontainers = {extras = ["postgres"], version = "^4.8.2"}

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR6301']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = [".venv", "migrations"]


[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'
mypy = 'mypy . --ignore-missing-imports --check-untyped-defs'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
